# byterun

./: Dockerfile  README.md  makefile  pyproject.toml
byterun/: main.py
byterun/evm/: memory.py  storage.py  vm.py
byterun/evm/constants/: constants.py
byterun/exception/: errors.py
byterun/interpreter/: vm.py
byterun/types/: models.py  opcode.py
src/: main.py
src/exception/: errors.py
src/interpreter/: vm.py
src/test/: test_byterun.py
test/: test_byterun.py
tests/: test_byterun.py  test_memory.py
