[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byterun"
version = "0.1.0"
description = "A simple stack-based interpreter"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
